<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/edit_rev_confirm_menu_button"
    android:icon="@drawable/ic_baseline_check_24"
    android:title="@string/confirm"
    app:showAsAction="ifRoom"/>

  <item
    android:id="@+id/edit_rev_quit_menu_button"
    android:icon="@drawable/ic_baseline_clear_24"
    android:title="@string/quit"
    app:showAsAction="ifRoom"/>

</menu>