<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/delete_rev_button"
      android:icon="@drawable/ic_baseline_delete_forever_24"
      android:title="@string/delete_review"
      app:showAsAction="always" />
  <item
    android:id="@+id/view_location_menu_button"
    android:icon="@drawable/ic_baseline_map_24"
    android:title="@string/view_location"
    app:showAsAction="ifRoom"/>

  <item
    android:id="@+id/edit_rev_menu_button"
    android:icon="@drawable/ic_baseline_edit_24"
    android:title="@string/edit_review"
    app:showAsAction="ifRoom"/>

</menu>