<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".review.YourReviewsFragment">

  <data>
    <import type="android.view.View" />
    <import type="androidx.core.content.ContextCompat" />
    <variable
      name="yourReviewsViewModel"
      type="com.carkzis.android.silenus.review.YourReviewsViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/your_reviews_recylerview"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/searchview" />

    <SearchView
      android:id="@+id/searchview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#55F5F5F5"
      android:elevation="1dp"
      android:iconifiedByDefault="false"
      android:queryHint="Search"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>


</layout>