...
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hub_text">

      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reviews_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_myplaces"
        tools:layout_editor_absoluteX="141dp"
...
